Update Used Cars web scrapping.ipynb

--- a/Used Cars web scrapping.ipynb
+++ b/Used Cars web scrapping.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**From POOJA C Internship Batch:18**"
+    "**From GAIRIK DEY**"
    ]
   },
   {
